==> zephyrproject-rtos/zephyr/modules/lora-basics-modem/smtc_modem_hal/smtc_modem_hal.c <==
#include <stdarg.h>
#include <zephyr/device.h>
#include <zephyr/drivers/lora.h>
#include <zephyr/drivers/gpio.h>
#include <zephyr/kernel.h>
#include <zephyr/logging/log.h>
#include <zephyr/random/random.h>
#include <lbm_common.h>
#include <smtc_modem_hal.h>
#include <smtc_modem_hal_ext.h>
#define HAL_WORKQ_STACK_SIZE 1024
#define HAL_WORKQ_PRIORITY (-1)

uint32_t smtc_modem_hal_get_time_in_ms(void)
{
	return k_uptime_get_32();
}

void smtc_modem_hal_start_timer(const uint32_t milliseconds, callback_t callback, void *context)
{
	prv_timer_data.timer_cb = callback;
	prv_timer_data.context = context;

	k_timer_start(&prv_timer, K_MSEC(milliseconds), K_NO_WAIT);
}

void smtc_modem_hal_stop_timer(void)
{
	k_timer_stop(&prv_timer);
}

void smtc_modem_hal_enable_modem_irq(void)
{
	prv_modem_irq_enabled = true;

	if (prv_pending_timer_cb) {
		prv_pending_timer_cb = false;
		if (prv_timer_data.timer_cb != NULL) {
			prv_timer_data.timer_cb(prv_timer_data.context);
		}
	}

	if (prv_pending_dio_cb) {
		prv_pending_dio_cb = false;
		if (prv_cb_data.dio_cb != NULL) {
			prv_cb_data.dio_cb(prv_cb_data.context);
		}
	}
}

void smtc_modem_hal_irq_config_radio_irq(callback_t dio_cb, void *context)
{
	int ret;

	__ASSERT(prv_transceiver_dev, "smtc_modem_hal_init must be called first");
	__ASSERT(dio_cb, "DIO1 callback must be provided");

	if (prv_cb_data.dio_cb != NULL) {
		ret = lbm_driver_remove_dio1_gpio_callback(prv_transceiver_dev, &prv_cb_data.cb);
		if (ret < 0) {
			LOG_ERR("Failed to remove DIO1 GPIO callback: %d", ret);
		}
	}

	prv_cb_data.dio_cb = dio_cb;
	prv_cb_data.context = context;

	ret = lbm_driver_add_dio1_gpio_callback(prv_transceiver_dev, &prv_cb_data.cb,
						hal_irq_callback);
	if (ret < 0) {
		LOG_ERR("Failed to add DIO1 GPIO callback: %d", ret);
	}
}

void smtc_modem_hal_on_panic(uint8_t *func, uint32_t line, const char *fmt, ...)
{
	LOG_ERR("LBM panic: %s:%u", func, line);
	k_panic();
}
